--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="jumbotron banner">
-			<h1 id="jumbo"></h1>
+			<h1 id="jumbo">Europe Cities GIFs</h1>
 			</div>
 		</div>
 	</div>
